--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.3",
+    "vue-yandex-maps": "^0.8.8",
     "vuetify": "^1.5.14",
     "vuex": "^3.1.1"
   },
