--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "geolib": "^3.0.2",
     "interactjs": "^1.4.0-rc.13",
     "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
